ec2-jenkins/ec2.tf
# AWS 리전
provider "aws" {
    region       = "us-east-1"
}

# VPC
variable "vpc_id" {
  default        = "vpc-09ba82b24a6cd8031"
}

# 보안 그룹
resource "aws_security_group" "sg1" {
  name           = "jenkins-sg-cicd"
  description    = "jenkins-sg-cicd"
  vpc_id = var.vpc_id

  # 인바운드 규칙
  ingress {
    description  = "ssh"
    from_port    = "22"
    to_port      = "22"
    protocol     = "tcp"
    cidr_blocks  = ["0.0.0.0/0"]
  }
  ingress {
    description  = "APP"
    from_port    = "3000"
    to_port      = "3000"
    protocol     = "tcp"
    cidr_blocks  = ["0.0.0.0/0"]
  }

  # 아웃 바운드 규칙
  egress {
    from_port    = 0
    to_port      = 0
    protocol     = "-1"
    cidr_blocks  = ["0.0.0.0/0"]
  }

  tags = {
    Name         = "jenkins-sg-cicd"
    Service      = "cicd-test"
  }
}

# EC2 생성
resource "aws_instance" "ec2-jenkins" {
  ami                    = "ami-0453ec754f44f9a4a"       # AMI ID
  instance_type          = "t2.medium"                    # 인스턴스 유형
  key_name               = "saju-key-test"                # 키 페어 설정
  vpc_security_group_ids = ["sg-08b376602ead799b0"]  # 보안그룹 설정
  availability_zone      = "us-east-1a"                  # 가용영역 설정
  user_data              = file("./userdata.sh")         # 사용자 데이터
  
  # 볼륨 설정
  root_block_device {
    volume_size  = 30
    volume_type  = "gp3"
  }

  tags = {
    Name         = "jenkins-ec2-cicd"
    Service      = "cicd-test"
  }

}

# 탄력적 IP 주소 할당
# 위치 : EC2 > 네트워크 및 보안 > 탄력적 IP
# 
resource "aws_eip" "eip" {
  instance = aws_instance.ec2-jenkins.id

  tags = {
    Name         = "jenkins-eip-cicd"
    Service      = "cicd-test"
  }
}

# 탄력적 IP를 ec2에 연결
output "eip_ip" {
  value = aws_eip.eip.public_ip
}
